// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.Controls docKit example Example forms with formcontrols 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="idRoot"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Header
      content={
        <Box
          bgStyle="filled"
          borderRadius={null}
          className="font-size-m"
          colorSchema="green"
          content="Basic registration form demo"
          controlled={true}
          disableClick={false}
          disabled={false}
          dynamic={false}
          elevation={null}
          elevationHover={null}
          hidden={false}
          id="idBox"
          ignoreInnerHTML={false}
          infoContent={null}
          infoHeader="Info"
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      }
      id="idRoot-header"
      key="0"
      underline={false}
    />
    <Text
      id="idText"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <Text
      id="idText2"
      key="1-1"
      label="SubName"
      name="subname"
      placeholder="Smith"
      required={true}
    />
    <Controls
      buttonReset={true}
      buttonValidate={true}
      id="controlsID"
      key="1-2"
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Controls props buttonReset=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props buttonReset=true 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    bgStyle="transparent"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Reset",
            "en": "Reset",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props buttonValidate=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props buttonValidate=true 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    bgStyle="transparent"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zvalidovat",
            "en": "Validate",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props className="my-classname" 1`] = `
<Div
  className="uu5-forms-controls my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props controlled=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props controlled=true 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props default props 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props disabled=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props disabled=true 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    disabled={true}
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    disabled={true}
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props hidden=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props hidden=true 1`] = `
<Div
  className="uu5-forms-controls"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props id="myId" 1`] = `
<Div
  className="uu5-forms-controls"
  id="myId-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props mainAttrs=undefined 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props name="myName" 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props noIndex=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props noIndex=true 1`] = `
<Div
  className="uu5-forms-controls uu5-noindex"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props pureRender=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props pureRender=true 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
  pureRender={true}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props selected=false 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props selected=true 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
  selected={true}
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;

exports[`UU5.Forms.Controls props tooltip="My Tooltip" 1`] = `
<Div
  className="uu5-forms-controls"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  tooltip="My Tooltip"
>
  <Button
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zrušit",
            "en": "Cancel",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
  <Button
    colorSchema="primary"
    content={
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "OK",
            "en": "OK",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    onClick={[Function]}
  />
</Div>
`;
